--- a/Src/MassTransit3Demo.Core/MassTransit3Demo.Core.csproj
+++ b/Src/MassTransit3Demo.Core/MassTransit3Demo.Core.csproj
@@ -34,6 +34,10 @@
       <HintPath>packages\Autofac.3.5.2\lib\net40\Autofac.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Automatonymous, Version=3.3.0.0, Culture=neutral, PublicKeyToken=b800c4cfcdeea87b, processorArchitecture=MSIL">
+      <HintPath>packages\Automatonymous.3.3.0\lib\net452\Automatonymous.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="ConfigInjector, Version=2.1.949.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>packages\ConfigInjector.2.1.949.0\lib\net45\ConfigInjector.dll</HintPath>
       <Private>True</Private>
@@ -44,6 +48,10 @@
     </Reference>
     <Reference Include="MassTransit.AutofacIntegration, Version=3.3.1.0, Culture=neutral, PublicKeyToken=b8e0e9f2f1e657fa, processorArchitecture=MSIL">
       <HintPath>packages\MassTransit.Autofac.3.3.5\lib\net452\MassTransit.AutofacIntegration.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="MassTransit.AutomatonymousIntegration, Version=3.3.1.0, Culture=neutral, PublicKeyToken=b8e0e9f2f1e657fa, processorArchitecture=MSIL">
+      <HintPath>packages\MassTransit.Automatonymous.3.3.5\lib\net452\MassTransit.AutomatonymousIntegration.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="MassTransit.RabbitMqTransport, Version=3.3.1.0, Culture=neutral, PublicKeyToken=b8e0e9f2f1e657fa, processorArchitecture=MSIL">
@@ -86,6 +94,10 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="Taskell, Version=0.1.2.0, Culture=neutral, PublicKeyToken=b800c4cfcdeea87b, processorArchitecture=MSIL">
+      <HintPath>packages\Taskell.0.1.2\lib\net40\Taskell.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Consumers\PrintToConsoleCommandConsumer.cs" />
@@ -100,6 +112,8 @@
     <Compile Include="MiddlewareExtensions\PerformanceLogger\PerformanceLoggerPipeSpecification.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RequestClient.cs" />
+    <Compile Include="Sagas\BankoffSaga\ReversalSaga.cs" />
+    <Compile Include="Sagas\BankoffSaga\BankoffSagaStateMachine.cs" />
     <Compile Include="Settings\BaseQueueNameSetting.cs" />
     <Compile Include="Settings\GeneralQueueNamePostfixSetting.cs" />
     <Compile Include="Settings\QueuePasswordSetting.cs" />
@@ -109,6 +123,7 @@
     <Compile Include="Settings\SeqSinkUrlSetting.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
