--- a/Src/MassTransit3Demo.Core/packages.config
+++ b/Src/MassTransit3Demo.Core/packages.config
@@ -1,9 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autofac" version="3.5.2" targetFramework="net452" />
+  <package id="Automatonymous" version="3.3.0" targetFramework="net452" />
   <package id="ConfigInjector" version="2.1.949.0" targetFramework="net452" />
   <package id="MassTransit" version="3.3.5" targetFramework="net452" />
   <package id="MassTransit.Autofac" version="3.3.5" targetFramework="net452" />
+  <package id="MassTransit.Automatonymous" version="3.3.5" targetFramework="net452" />
   <package id="MassTransit.RabbitMQ" version="3.3.5" targetFramework="net452" />
   <package id="NewId" version="2.1.3" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
@@ -11,4 +13,5 @@
   <package id="Serilog" version="1.5.14" targetFramework="net452" />
   <package id="Serilog.Sinks.Seq" version="1.5.36" targetFramework="net452" />
   <package id="SerilogMetrics" version="1.0.34" targetFramework="net452" />
+  <package id="Taskell" version="0.1.2" targetFramework="net452" />
 </packages>
