--- a/Src/MassTransit3Demo.Messages/MassTransit3Demo.Messages.csproj
+++ b/Src/MassTransit3Demo.Messages/MassTransit3Demo.Messages.csproj
@@ -42,11 +42,14 @@
   <ItemGroup>
     <Compile Include="Commands\PrintToConsoleCommand.cs" />
     <Compile Include="Conversation\SimpleResonse.cs" />
+    <Compile Include="Events\TransactionAcknowledgedEvent.cs" />
+    <Compile Include="Events\TransactionReversedEvent.cs" />
     <Compile Include="MessageContracts\IRequestItem.cs" />
     <Compile Include="MessageContracts\IResponseItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Conversation\SimpleRequest.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
