Implement message visioning

--- a/Src/MassTransit3Demo.Core/MassTransit3Demo.Core.csproj
+++ b/Src/MassTransit3Demo.Core/MassTransit3Demo.Core.csproj
@@ -100,6 +100,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Consumers\OrderPlacedEventConsumer.cs" />
     <Compile Include="Consumers\PrintToConsoleCommandConsumer.cs" />
     <Compile Include="Consumers\SimpleRequestConsumer.cs" />
     <Compile Include="CoreAssembly.cs" />
