--- a/Src/MassTransit3Demo.Messages/MassTransit3Demo.Messages.csproj
+++ b/Src/MassTransit3Demo.Messages/MassTransit3Demo.Messages.csproj
@@ -42,6 +42,10 @@
   <ItemGroup>
     <Compile Include="Commands\PrintToConsoleCommand.cs" />
     <Compile Include="Conversation\SimpleResonse.cs" />
+    <Compile Include="Events\IOrderPlacedEventV2.cs" />
+    <Compile Include="Events\IOrderPlacedEvent.cs" />
+    <Compile Include="Events\OrderPlacedEventV2.cs" />
+    <Compile Include="Events\OrderPlacedEvent.cs" />
     <Compile Include="Events\TransactionAcknowledgedEvent.cs" />
     <Compile Include="Events\TransactionReversedEvent.cs" />
     <Compile Include="MessageContracts\IRequestItem.cs" />
