Add multiple queue to bus

--- a/Src/MassTransit3Demo.Core/MassTransit3Demo.Core.csproj
+++ b/Src/MassTransit3Demo.Core/MassTransit3Demo.Core.csproj
@@ -112,16 +112,16 @@
     <Compile Include="MiddlewareExtensions\PerformanceLogger\PerformanceLoggerExtension.cs" />
     <Compile Include="MiddlewareExtensions\PerformanceLogger\PerformanceLoggerFilter.cs" />
     <Compile Include="MiddlewareExtensions\PerformanceLogger\PerformanceLoggerPipeSpecification.cs" />
-    <Compile Include="MiddlewareExtensions\PublishMessageSink\PublishMessageSinkExtension.cs" />
-    <Compile Include="MiddlewareExtensions\PublishMessageSink\PublishMessageSinkFilter.cs" />
-    <Compile Include="MiddlewareExtensions\PublishMessageSink\PublishMessageSinkPipeSpecification.cs" />
+    <Compile Include="MiddlewareExtensions\PublishMessageSink\EventStoreExtension.cs" />
+    <Compile Include="MiddlewareExtensions\PublishMessageSink\EventStoreFilter.cs" />
+    <Compile Include="MiddlewareExtensions\PublishMessageSink\EventStorePipeSpecification.cs" />
     <Compile Include="MiddlewareExtensions\SayHello\SayHelloExtension.cs" />
     <Compile Include="MiddlewareExtensions\SayHello\SayHelloLoggerFilter.cs" />
     <Compile Include="MiddlewareExtensions\SayHello\SayHelloPipeSpecification.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RequestClient.cs" />
-    <Compile Include="Sagas\BankoffSaga\ReversalSaga.cs" />
-    <Compile Include="Sagas\BankoffSaga\ReversalSagaStateMachine.cs" />
+    <Compile Include="Sagas\ReversalSaga\ReversalSaga.cs" />
+    <Compile Include="Sagas\ReversalSaga\ReversalSagaStateMachine.cs" />
     <Compile Include="Settings\BaseQueueNameSetting.cs" />
     <Compile Include="Settings\GeneralQueueNamePostfixSetting.cs" />
     <Compile Include="Settings\QueuePasswordSetting.cs" />
