--- a/Src/MassTransit3Demo.Messages/MassTransit3Demo.Messages.csproj
+++ b/Src/MassTransit3Demo.Messages/MassTransit3Demo.Messages.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Commands\PrintToConsoleCommand.cs" />
+    <Compile Include="Commands\StartMigrationCommand.cs" />
     <Compile Include="Conversation\SimpleResonse.cs" />
     <Compile Include="Events\IEvent.cs" />
     <Compile Include="Events\IOrderPlacedEventV2.cs" />
